--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -12,7 +12,7 @@
     window.addEventListener("keyup", (e) => {
         console.log(e.key);
         keyUp.push(e.key);
-        keyUp.splice(-secretCode.length - 1, pressed.length - secretCode.length); //截取数组
+        keyUp.splice(-secretCode.length - 1, keyUp.length - secretCode.length); //截取数组
         if (keyUp.join('').includes(secretCode)) { //判断是否符合暗号
             alert("惊喜！")
         }
